--- a/diving-deeper/diving-deeper-01-project-introducing-the-box-model-starting-code/main.css
+++ b/diving-deeper/diving-deeper-01-project-introducing-the-box-model-starting-code/main.css
@@ -1,13 +1,26 @@
+*{
+  box-sizing: border-box;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
+    margin: 0;
 }
 
 #product-overview {
     background: #ff1b68;
-}
+    width: 50%;
+    height: 400px;
+    padding: 10px;
+    margin: 10px;
+    border: 5px solid black;
+  }
 
 .section-title {
     color: #2ddf5c;
+}
+main{
+  height: 100%;
 }
 
 #product-overview h1 {
