--- a/diving-deeper/diving-deeper-01-project-introducing-the-box-model-starting-code/main.css
+++ b/diving-deeper/diving-deeper-01-project-introducing-the-box-model-starting-code/main.css
@@ -9,11 +9,10 @@ body {
 
 #product-overview {
     background: #ff1b68;
-    width: 50%;
-    height: 400px;
+    width: 100%;
+    height: 528px;
     padding: 10px;
-    margin: 10px;
-    border: 5px solid black;
+
   }
 
 .section-title {
@@ -31,3 +30,14 @@ main{
 /* h1 {
     font-family: sans-serif;
 } */
+
+.main-header{
+    width: 100%;
+    background: #2ddf5c;
+    padding: 8px 16px;
+}
+
+.main-nav__item{
+  display: inline-block;
+  padding: 10px;
+}
