Add more content to readme

--- a/diving-deeper/diving-deeper-01-project-introducing-the-box-model-starting-code/main.css
+++ b/diving-deeper/diving-deeper-01-project-introducing-the-box-model-starting-code/main.css
@@ -36,8 +36,43 @@ main{
     background: #2ddf5c;
     padding: 8px 16px;
 }
-
+.main-header > div {
+    display: inline-block;
+    /*vertical-align: middle;*/
+}
+.main-header__brand{
+  color: #0e4f1f;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 22px;
+}
+.main-nav{
+  display: inline-block;
+  text-align: right;
+  width: calc(100% - 75px)
+  /*vertical-align: middle;*/
+}
+.main-nav__items{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 .main-nav__item{
   display: inline-block;
   padding: 10px;
+  margin: 0 16px;
+
 }
+.main-nav__item  a{
+
+  text-decoration: none;
+  color: #0e4f1f;
+}
+
+.main-nav__item a:hover{
+  color: white;
+}
+.main-nav__item a:active{
+  color: white;
+}
+
