--- a/diving-deeper/diving-deeper-01-project-introducing-the-box-model-starting-code/main.css
+++ b/diving-deeper/diving-deeper-01-project-introducing-the-box-model-starting-code/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 #product-overview {
-    background: #ff1b68;
+    background: url("freedom.jpg");
     width: 100%;
     height: 528px;
     padding: 10px;
@@ -67,12 +67,33 @@ main{
 
   text-decoration: none;
   color: #0e4f1f;
+
 }
 
-.main-nav__item a:hover{
-  color: white;
-}
+.main-nav__item a:hover,
 .main-nav__item a:active{
   color: white;
+  border-bottom: 5px solid white;
+  padding: 3px 0;
 }
+.main-nav__item--cta a{
+  color: white;
+  border-radius: 8px;
+  padding: 8px 16px;
+  background: #ff1b68;
+}
+/*Use of Pseudo class*/
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active{
+  color: #ff1b68;
+  background: white;
+  border: none;
 
+}
+/*Use of a Pseudo element*/
+/*.main-nav__item a::after{
+  content: "(Link)";
+  color: red;
+  padding: 0 10px;
+}
+*/
